@@ -1416,7 +1416,7 @@ public class HRegionServer implements HConstants, HRegionInterface,
                   + e.msg.toString());
             }
           } catch (InterruptedException ex) {
-            // continue
+            LOG.warn("Processing Worker queue", ex);
           } catch (Exception ex) {
             if (ex instanceof IOException) {
               ex = RemoteExceptionHandler.checkIOException((IOException) ex);
@@ -1714,7 +1714,8 @@ public class HRegionServer implements HConstants, HRegionInterface,
       LOG.debug("Batch puts: " + i, ex);
       return i;
     } catch (NotServingRegionException ex) {
-      LOG.debug("Batch puts: " + i, ex);
+      LOG.debug("Batch puts interrupted at index=" + i + " because:" +
+        ex.getMessage());
       return i;
     } catch (Throwable t) {
       throw convertThrowableToIOE(cleanup(t));
@@ -2427,5 +2428,4 @@ public class HRegionServer implements HConstants, HRegionInterface,
 
     return resp;
   }
-
 }
