@@ -485,6 +485,7 @@ Release 0.21.0 - Unreleased
                holds up all flushing
    HBASE-2252  Mapping a very big table kills region servers
    HBASE-2412  [stargate] PerformanceEvaluation
+   HBASE-2419  Remove from RS logs the fat NotServingRegionException stack
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
